# solv-ai

./: README.md  folder_structure.md  package-lock.json
backend/: Dockerfile  app.py  main.py  pyproject.toml
backend/docker/: dockerfile
backend/prompts/: build_prompt.py
backend/schemas/: schemas.py
backend/services/: docker_executor.py  llm_service.py
backend/utils/: config.py  execute.py  utils.py  validation.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/components/: CodingBlock.tsx  Item.tsx  List.tsx  Modal.tsx  ProblemBlock.tsx
frontend/src/hooks/: useProblem.tsx  useValidation.tsx
frontend/src/pages/: App.tsx
frontend/src/services/: handleGenerateProblem.tsx  handleValidateProblem.tsx
frontend/src/styles/: index.css
frontend/src/tests/: useProblem.test.tsx
frontend/src/types/: types.tsx
