[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.3",
    "huggingface-hub>=1.19.0",
    "pytest>=9.0.3",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]
